--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           repository: vholer/test-ghw-shared
           token: ${{ secrets.GIT_ACCESS_TOKEN }}
-          path: /tmp/reusable-repo
+          path: reusable-repo
           fetch-depth: 1
           submodules: false
 
@@ -39,5 +39,4 @@ jobs:
       - name: Test
         id: test
         run: |
-          find /tmp
-          /tmp/reusable-repo/.github/scripts/test.sh
+          reusable-repo/.github/scripts/test.sh
