--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           repository: vholer/test-ghw-shared
           path: reusable-repo
+          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 1
           submodules: false
 
